--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    hello world
 <script src="javascript/script.js"></script>
 </body>
 </html>
