--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    hello world
+    hello worlds
+    new added code
 <script src="javascript/script.js"></script>
 </body>
 </html>
