--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>Hello Group two</p>
-    <p>This is web development class</p>
+    <p>This is web development class 2021</p>
 <script src="javascript/script.js"></script>
 </body>
 </html>
