--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+    test
 <script src="javascript/script.js"></script>
 </body>
 </html>
