--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     hello worlds
-    Things are ecxiting
+    Things are so ecxiting
     <script src="javascript/script.js"></script>
 </body>
 
