--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     dfgdg
     roza
     <p>group2</p>
-
-
+    Hi Dani this is group two project. 
 <script src="javascript/script.js"></script>
 </body>
 </html>
