--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+  <a href="about-us.html">About Us</a>
     hello world
     hello dani boy
 
