--- a/index.html
+++ b/index.html
@@ -2,53 +2,53 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-
-    hello worlds
-    dfgdg
-    roza
-    <p>group2</p>
-
-
-
-    test
+  hi danni this is yeshi
+  hello worlds
+  dfgdg
+  roza
+  <p>group2</p>
 
 
 
-    hello world
+  test
 
-    <p> Hi Mike</p>
 
-    hello dani boy
+
+  hello world
+
+  <p> Hi Mike</p>
+
+  hello dani boy
 
 
 
   <p>Hello Group two</p>
-    <p>This is web development class of ...2021...</p>
-    hello worlds
+  <p>This is web development class of ...2021...</p>
+  hello worlds
 
-    Things are so ecxiting
-    <script src="javascript/script.js"></script>
-
-
-    new added code
-
-    hi dani
-
-    dfgdg
-    roza
-    <p>group2</p>
+  Things are so ecxiting
+  <script src="javascript/script.js"></script>
 
 
+  new added code
 
-<script src="javascript/script.js"></script>
+  hi dani
+
+  dfgdg
+  roza
+  <p>group2</p>
+
+
+
+  <script src="javascript/script.js"></script>
 
 </body>
 
