--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
    Contact_us is updated by Meron 
-   <a href="contactUs.html">ContactUs</a>
+   <a href="meron.html">ContactUs</a>
   test
 
 
