--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +10,16 @@
 
 <body>
 
-   Contact_us is updated by Meron 
-   <a href="meron.html">ContactUs</a>
-  test
+    Contact_us is updated by Meron
+    <a href="meron.html">ContactUs</a>
+    test
 
+    <p> the best group ever </p>
 
     hello world
     hello dani boy
 
-  <p>Hello Group two</p>
+    <p>Hello Group two</p>
     <p>This is web development class of ...2021...</p>
     hello worlds
 
@@ -30,6 +32,7 @@
     <p>group2</p>
 
 
-<script src="javascript/script.js"></script>
+    <script src="javascript/script.js"></script>
 </body>
+
 </html>
