--- a/Melaku.html
+++ b/Melaku.html
@@ -71,8 +71,7 @@
     Hi Dani this is group two project. 
 
 
-
-   This is Melaku
+   Hi Dani this Melaku
 
   <script src="javascript/script.js"></script>
 
