--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
 
     Hi Dani this is group two project. 
 
-
-
-
+<div> i am trying to join just today </div>
 
 <script src="javascript/script.js"></script>
 
