--- a/index.html
+++ b/index.html
@@ -1,80 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=h1, initial-scale=1.0">
+  <title>Document</title>
 </head>
-
 <body>
-  <h1>hello group 2</h1>
- <p> Selam all</p>
-  <a href="about-us.html">About Us</a>
-
-
-    just added new code now
-    hello worlds
-    dfgdg
-    roza
-    <p>group2</p>
-
-
-
-    test
-
-
-    Contact_us is updated by Meron
-    <a href="meron.html">ContactUs</a>
-    test
-
-    <p> the best group ever </p>
-
-
-  <p>lee selam</p>
-
-    hello world
-
-    <p> Hi Mike</p>
-
-    hello dani boy
-
-
-    <p>Hello Group two</p>
-
-
-  <p>Hello Group two</p>
-
-    <p>This is web development class of ...2021...</p>
-    hello worlds
-
-    Things are so ecxiting
-    <script src="javascript/script.js"></script>
-
-
-    new added code
-
-    hi dani
-
-    dfgdg
-    roza
-    <p>group2</p>
-
-    Hi Dani this is group two project. 
-
-
-<h2>hi dunny </h2>
-
-<div> i am trying to join just today </div>
-
-
-
-    <script src="javascript/script.js"></script>
-
-<script src="javascript/script.js"></script>
-
-
+  <h1>Hello africa </h1>
+  <script src="javascript/script.js"></script>
 </body>
-
 </html>
