Made some modification on multiple files

--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=h1, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Hello africa </h1>
-  <script src="javascript/script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=h1, initial-scale=1.0" />
+    <title>Document</title>
+    ,
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+
+  <body>
+    <header class="firstHeader">
+      <ul>
+        <li>SERVICES</li>
+        <li>RESERVATIONS</li>
+        <li>FLEET</li>
+        <li>CONTACT US</li>
+      </ul>
+    </header>
+    <div class="firstdiv">
+      <img src="images/logo.png" alt="logo" />
+      <h1>
+        <span>The Rockies Limousine transportation services </span>
+      </h1>
+      <p id="message" class="firstParagraph">
+        Our drivers are put through an extensive training program and
+        safety-driving course so they are prepared to handle any and all weather
+        conditions. They are licensed professionals who offer an abundance of
+        local knowledge on the history of The Rockies.
+      </p>
+    </div>
+    <script src="javascript/script.js"></script>
+  </body>
 </html>
